<resources>
    <string name="app_name">Solve Physics</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tag_bienvenido">Bienvenido</string>
    <string name="tag_mruv">MRUV</string>
    <string name="tag_mru">MRU</string>
    <string name="title_activity_mru">Movimiento rectilíneo uniforme</string>
    <string name="title_activity_mruv">Movimiento rectilíneo uniforme variado</string>
    <string name="tag_mru_explicacion">Ingresa al menos dos de los parametros para obtener los faltantes</string>
    <string name="tag_mruv_explicacion">Ingresa al menos tres de los parametros para obtener los faltantes</string>
    <string name="tag_mru_titulo">Movimiento rectilíneo uniforme</string>
    <string name="tag_distancia">Distancia:</string>
    <string name="tag_velocidad">Velocidad:</string>
    <string name="tag_tiempo">Tiempo:</string>
    <string name="tag_calcular">Calcular</string>
    <string name="tag_velocidad_inicial">Velocidad inicial:</string>
    <string name="tag_velocidad_final">Velocidad final:</string>
    <string name="tag_aceleracion">Acelereación:</string>
    <string name="tag_mruv_titulo">Movimiento rectilineo uniforme variado</string>
    <string name="title_activity_respuestas">Respuesta</string>
    <string name="loading">Cargando...</string>
    <string name="tag_aceptar">Aceptar</string>
    <string name="tag_content_image">Icono</string>
    <string name="title_activity_caida_libre">Caida Libre</string>
    <string name="tag_caida_libre_btn">Caida Libre</string>
    <string name="tag_tiro_parabolico_btn">Tiro Parabólico</string>
    <string name="title_activity_tiro_parabolico">TiroParabolicoActivity</string>
    <string name="tag_titulo_caida_libre">Caida Libre</string>
    <string name="tag_gravedad">Gravedad:</string>
    <string name="tag_altura">Altura:</string>
    <string name="tag_altura_maxima">Altura maxima:</string>
    <string name="tag_distancia_maxima">Distancia maxima:</string>
    <string name="tag_angulo">Angulo:</string>
    <string name="tag_tiempo_up">Tiempo subida:</string>
    <string name="tag_tiempo_down">Tiempo bajada:</string>
    <string name="tag_tiempo_total">Tiempo total:</string>
    <string name="tag_velocidad_inicial_x">Velocidad inicial en X:</string>
    <string name="tag_velocidad_final_x">Velocidad final en X:</string>
    <string name="tag_velocidad_inicial_y">Velocidad inicial en Y:</string>
    <string name="tag_velocidad_final_y">Velocidad final en Y:</string>
    <string name="tag_tiro_parabolico_explicacion">Ingresa al menos 5 de los parametros para obtener los faltantes</string>
    <string name="title_activity_tiro_vertical">TiroVerticalActivity</string>
    <string name="tag_tiro_vertical">Tiro Vertical</string>
    <string name="tag_tiro_parabolico_titulo">Tiro Parabólico</string>
</resources>
